

This is the ztemplates changelog. Here I will keep you informed about the changes I am currently working on. It also contains the changelog for unreleased versions, so you can see what's coming next. 

snapshot available from [https://oss.sonatype.org/content/repositories/snapshots/org/ztemplates/ztemplates/]

__ztemplates-2.5.0-SNAPSHOT (Not yet released)__ 

* added init property (servletContext.getInitParameter()) 'ztemplates.devMode.html.comments' that adds html comments with debug infos to the output. Comments will be generated only when ZRenderer.mimeType is set, and only for mime-type text/html and text/javascript.
* added annotation ZMatch.requiresProtocol (@ZMatch.Protocol.HTTP/HTTPS) where you can specify that a action needs to be called under a specified protocol. If not sends a redirect to the correct protocol.
* added init property (servletContext.getInitParameter()) 'ztemplates.url.prefix.https' and 'zemplates.url.prefix.http' that are added when creating urls with ZIActionService. If set these are propended to urls. If Action is annotated with @ZSecure it will use https otherwise http. 
* added property ztemplatesCssDigest that can be used from templates when ZRenderEngine.zscript is set to true to reload ztemplates.css from the browser only if content changed.

__ztemplates-2.4.0-SNAPSHOT (Released)__ 

* added support for jquery.ajax 'feature' that creates parameter names like 'name[]'. ztemplates will remove the trailing [] so you can use a private String[] name in your actions code to match that value. 
* now can use private fields in Actions for request parameters, no need to declare getter and setter anymore
* added method ZIRenderService.render(JSONArray)
* added support for context parameter property "ztemplates.devMode" (servletContext.getInitParameter("ztemplates.devMode")) that disables as many caches as possible to support tools like JRebel for no redeploy